--- a/contact-us.html
+++ b/contact-us.html
@@ -12,7 +12,7 @@
 
 	<meta name='keywords' content=''>
 	<meta name='description' content=''>
-	<meta name='subject' content="">
+	<meta name='subject' content=""> 
 	<meta name='copyright' content=''>
 	<meta name='language' content='EN'>
 	<meta name='robots' content='index,follow'>
@@ -91,11 +91,10 @@
 						<a class="dropdown-item" href="/international-students.html">International Students</a>
 					</div>
 				</li> -->
-				<li><a href="/who-we-are.html">Who We Are</a></li>
-				<li><a href="/why-us.html">Why Us</a></li>
-				<li><a href="/services.html">Services</a></li>
-				<li><a href="/our-warranty.html">Our Warranty</a></li>
-				<li><a href="/contact-us.html" class="active">Contact Us</a></li>
+				<li><a href="./who-we-are.html">Who We Are</a></li>
+				<li><a href="./why-us.html">Why Us</a></li>
+				<li><a href="./refer-accent.html">Refer Accent</a></li>
+				<li><a href="./contact-us.html">Contact Us</a></li>
 				<li><a href="mailto:office3@accenttranslation.net?Subject=Please%20can%20I%20get%20a%20quote" target="_top"><button class="btn btnSmall">Get a Quote</button></a></li>
 			</ul>
 		</nav>
@@ -115,6 +114,7 @@
 					<li>Saturday - Sunday: Closed</li>
 				</ul>
 				<h5>Phone Number:</h5><p><span class="number"> +1 (416) 637-7791</span></p>
+				<h5>Fax:</h5><p><span class="number"> +1 (647) 436-6200</span></p>
 				<h5>Directions</h5>
 				<p>By car: closest intersection Dufferin & Wilson (Free parking behind the building)</p>
 				<p>By TTC: closest subway stations: Wilson - Yorkdale</p>
