--- a/imm-applicants.html
+++ b/imm-applicants.html
@@ -12,7 +12,7 @@
 
 	<meta name='keywords' content=''>
 	<meta name='description' content=''>
-	<meta name='subject' content="">
+	<meta name='subject' content=""> 
 	<meta name='copyright' content=''>
 	<meta name='language' content='EN'>
 	<meta name='robots' content='index,follow'>
@@ -91,11 +91,10 @@
 						<a class="dropdown-item" href="/international-students.html">International Students</a>
 					</div>
 				</li> -->
-				<li><a href="/who-we-are.html">Who We Are</a></li>
-				<li><a href="/why-us.html">Why Us</a></li>
-				<li><a href="/services.html">Services</a></li>
-				<li><a href="/our-warranty.html">Our Warranty</a></li>
-				<li><a href="/contact-us.html">Contact Us</a></li>
+				<li><a href="./who-we-are.html">Who We Are</a></li>
+				<li><a href="./why-us.html">Why Us</a></li>
+				<li><a href="./refer-accent.html">Refer Accent</a></li>
+				<li><a href="./contact-us.html">Contact Us</a></li>
 				<li><a href="mailto:office3@accenttranslation.net?Subject=Please%20can%20I%20get%20a%20quote" target="_top"><button class="btn btnSmall">Get a Quote</button></a></li>
 			</ul>
 		</nav>
@@ -234,7 +233,7 @@
 
 		</form> -->
 		<div id="result"></div>
-		<a href="https://goo.gl/forms/Iy2zoJOcSgHq1j1k1" target="_blank"><button id="picker" class="btn btnDark">Get a Quote</button>
+		<a href="https://goo.gl/forms/Iy2zoJOcSgHq1j1k1" target="_blank"><button id="picker" class="btn btnDark">Get a Quote</button></a>
 		<!--
 		<p>Disclaimer: translation must reflect the data in the original documents and we will use the names and the address that you gave to us. In case of discrepancy between the text in the document and your indication, we must keep our translation faithful to the original.</p> -->
 	</section>
@@ -290,6 +289,7 @@
 			<div id="copyright"><small>© 2014 Accent Translations Inc.</small></div>
 		</div>
 	</footer>
+
 
 
 <!-- Google Drive API  -->
