--- a/imm-professionals.html
+++ b/imm-professionals.html
@@ -12,7 +12,7 @@
 
 	<meta name='keywords' content=''>
 	<meta name='description' content=''>
-	<meta name='subject' content="">
+	<meta name='subject' content=""> 
 	<meta name='copyright' content=''>
 	<meta name='language' content='EN'>
 	<meta name='robots' content='index,follow'>
@@ -91,20 +91,39 @@
 						<a class="dropdown-item" href="/international-students.html">International Students</a>
 					</div>
 				</li> -->
-				<li><a href="/who-we-are.html">Who We Are</a></li>
-				<li><a href="/why-us.html">Why Us</a></li>
-				<li><a href="/services.html">Services</a></li>
-				<li><a href="/our-warranty.html">Our Warranty</a></li>
-				<li><a href="/contact-us.html">Contact Us</a></li>
+				<li><a href="./who-we-are.html">Who We Are</a></li>
+				<li><a href="./why-us.html">Why Us</a></li>
+				<li><a href="./refer-accent.html">Refer Accent</a></li>
+				<li><a href="./contact-us.html">Contact Us</a></li>
 				<li><a href="mailto:office3@accenttranslation.net?Subject=Please%20can%20I%20get%20a%20quote" target="_top"><button class="btn btnSmall">Get a Quote</button></a></li>
 			</ul>
 		</nav>
 		
 	</header>
 
-	<section id="our-warranty">
+	<section id="immProff">
 		<div class="container">
-			
+			<div>
+				<h3>Title</h3>
+
+				<p>As an immigration professional, you use all your skill and expertise to create the best application for your client.</p>
+
+				<p>However, there is a vital part of the application that does not depend on you: The translation of the applicant’s personal documents that are not already in English or French.</p>
+
+				<p>Every Immigration professional knows the problems that can arise when the translation of those documents:</p>
+
+				<ul>
+					<li>Is late</li>
+					<li>Contains language errors</li>
+					<li>Does not have the correct spelling of names or the correct dates</li>
+					<li>Does not comply with the notarization requirements (notarized translator’s affidavit or certified translation when required)</li>
+				</ul>
+
+				<p>Don’t let a perfect application end up with an unsuccessful outcome due to one or more of the above problems caused by a poor translation of their documents!</p>
+			</div>
+
+			<a href="https://goo.gl/forms/Iy2zoJOcSgHq1j1k1" target="_blank"><button id="picker" class="btn btnDark">Get a Quote</button></a>
+
 		</div>
 	</section>
 
