--- a/index.html
+++ b/index.html
@@ -91,11 +91,10 @@
 						<a class="dropdown-item" href="/international-students.html">International Students</a>
 					</div>
 				</li> -->
-				<li><a href="/who-we-are.html">Who We Are</a></li>
-				<li><a href="/why-us.html">Why Us</a></li>
-				<li><a href="/services.html">Services</a></li>
-				<li><a href="/our-warranty.html">Our Warranty</a></li>
-				<li><a href="/contact-us.html">Contact Us</a></li>
+				<li><a href="./who-we-are.html">Who We Are</a></li>
+				<li><a href="./why-us.html">Why Us</a></li>
+				<li><a href="./refer-accent.html">Refer Accent</a></li>
+				<li><a href="./contact-us.html">Contact Us</a></li>
 				<li><a href="mailto:office3@accenttranslation.net?Subject=Please%20can%20I%20get%20a%20quote" target="_top"><button class="btn btnSmall">Get a Quote</button></a></li>
 			</ul>
 		</nav>
@@ -105,8 +104,8 @@
 	<section id="enterence">
 		<div class="container">
 			<div class="text">
-				<h2>The Specialist in Translations for Immigration</h2>
-				<h6>The Canadian translation agency trusted by the best Immigration Professionals. </h5>
+				<h2>The Immigration Translation Specialist</h2>
+				<h6>The Canadian translation agency trusted by the best Immigration Professionals.</h5>
 				<a href="#profs"><button class="btn btnDark">Get a Translation</button></a>
 			</div>
 			<div class="image">
@@ -123,7 +122,7 @@
 					<div class="boxButton">
 						<img src="assets/svg/professional.svg">
 						<h5>Immigration<br> Professionals</h5>
-						<p>Explore how to work with us or to refer us to your clients</p>
+						<p>Find out how to work with us or how to refer your clients to us</p>
 						<button class="btn btnDark">Learn More</button>
 					</div>
 				</a>
@@ -131,21 +130,13 @@
 					<div class="boxButton">
 						<img src="assets/svg/applicant.svg">
 						<h5>Immigration<br> Applicants</h5>
-						<p>Explore how to get the right translation for a successful application</p>
+						<p>Find out how to get the right translation for a successful application</p>
 						<button class="btn btnDark">Learn More</button>
 					</div>
 				</a>
 				
-				<!-- <a href="/other-kinds-of-translations.html">
-					<div class="boxButton">
-						<img src="assets/svg/paper.svg">
-						<h5>Other Kinds Of Translations</h5>
-						<p>We are human because we are not animal, nor machine.</p>
-						<button class="btn btnDark">Learn More</button>
-					</div>
-				</a> -->
 			</div>
-			<div>
+			<!-- <div>
 				<p>Some description about the process or how they select what they need.</p>
 
 				<p>Immigration Professionals - Are we human because of unique traits and attributes not shared with either animal or machine? The definition of “human” is circular: we are human by virtue of the properties that make us human (i.e., distinct from animal and machine). </p>
@@ -153,7 +144,7 @@
 				<p>Immigration Applicants - It is a definition by negation: that which separates us from animal and machine is our “human-ness”.</p>
 
 				<p>Other Kinds of Translations - We are human because we are not animal, nor machine. But such thinking has been rendered progressively less tenable by the advent of evolutionary and neo-evolutionary theories which postulate a continuum in nature between animals and Man.</p>	
-			</div>
+			</div> -->
 		</div>
 	</section>
 
