--- a/refer-accent.html
+++ b/refer-accent.html
@@ -13,7 +13,7 @@
 	<meta name='keywords' content=''>
 	<meta name='description' content=''>
 	<meta name='subject' content="">
-	<meta name='copyright' content=''>
+	<meta name='copyright' content=''> 
 	<meta name='language' content='EN'>
 	<meta name='robots' content='index,follow'>
 	<meta name='Classification' content='Business'>
@@ -91,22 +91,33 @@
 						<a class="dropdown-item" href="/international-students.html">International Students</a>
 					</div>
 				</li> -->
-				<li><a href="/who-we-are.html">Who We Are</a></li>
-				<li><a href="/why-us.html">Why Us</a></li>
-				<li><a href="/services.html">Services</a></li>
-				<li><a href="/our-warranty.html" class="active">Our Warranty</a></li>
-				<li><a href="/contact-us.html">Contact Us</a></li>
+				<li><a href="./who-we-are.html">Who We Are</a></li>
+				<li><a href="./why-us.html">Why Us</a></li>
+				<li><a href="./refer-accent.html">Refer Accent</a></li>
+				<li><a href="./contact-us.html">Contact Us</a></li>
 				<li><a href="mailto:office3@accenttranslation.net?Subject=Please%20can%20I%20get%20a%20quote" target="_top"><button class="btn btnSmall">Get a Quote</button></a></li>
 			</ul>
 		</nav>
 		
 	</header>
 
-	<section id="our-warranty">
+	<section id="who-we-are">
 		<div class="container">
-			
+			<div>
+				<p>Use the services of Accent Translations, the only translation agency specialized in translations for immigration and the only one with an automatic referral system.</p>
+
+				<p>It’s easy to refer your clients to us. Just send them to REFERACCENT.COM. That’s it! Once they’re on the website, they’ll find easy-to-follow instructions in 8 languages.</p>
+
+				<button class="btn btnDark">ReferAccent.com</button>
+				<p>REFERACCENT.COM is our unique tool for requesting and providing a translation quote, for the confirmation and payment of the translation and delivery to the applicant and/or to the referring immigration professional.</p>
+
+				<p>With REFERACCENT.COM they’ll find everything they need to start the process and can decide if they want to have documents sent to their home or if they want them mailed directly to you.</p>
+
+				<p>In any case, when the client includes your name in the quote request as their referring professional, we will automatically send a digital copy of the translations to your office.</p>
+			</div>
 		</div>
 	</section>
+
 
 	<footer class="section">
 		<nav>
