--- a/services.html
+++ b/services.html
@@ -13,7 +13,7 @@
 	<meta name='keywords' content=''>
 	<meta name='description' content=''>
 	<meta name='subject' content="">
-	<meta name='copyright' content=''>
+	<meta name='copyright' content=''> 
 	<meta name='language' content='EN'>
 	<meta name='robots' content='index,follow'>
 	<meta name='Classification' content='Business'>
@@ -91,11 +91,10 @@
 						<a class="dropdown-item" href="/international-students.html">International Students</a>
 					</div>
 				</li> -->
-				<li><a href="/who-we-are.html">Who We Are</a></li>
-				<li><a href="/why-us.html">Why Us</a></li>
-				<li><a href="/services.html" class="active">Services</a></li>
-				<li><a href="/our-warranty.html">Our Warranty</a></li>
-				<li><a href="/contact-us.html">Contact Us</a></li>
+				<li><a href="./who-we-are.html">Who We Are</a></li>
+				<li><a href="./why-us.html">Why Us</a></li>
+				<li><a href="./refer-accent.html">Refer Accent</a></li>
+				<li><a href="./contact-us.html">Contact Us</a></li>
 				<li><a href="mailto:office3@accenttranslation.net?Subject=Please%20can%20I%20get%20a%20quote" target="_top"><button class="btn btnSmall">Get a Quote</button></a></li>
 			</ul>
 		</nav>
