--- a/who-we-are.html
+++ b/who-we-are.html
@@ -12,7 +12,7 @@
 
 	<meta name='keywords' content=''>
 	<meta name='description' content=''>
-	<meta name='subject' content="">
+	<meta name='subject' content=""> 
 	<meta name='copyright' content=''>
 	<meta name='language' content='EN'>
 	<meta name='robots' content='index,follow'>
@@ -91,11 +91,10 @@
 						<a class="dropdown-item" href="/international-students.html">International Students</a>
 					</div>
 				</li> -->
-				<li><a href="/who-we-are.html" class="active">Who We Are</a></li>
-				<li><a href="/why-us.html">Why Us</a></li>
-				<li><a href="/services.html">Services</a></li>
-				<li><a href="/our-warranty.html">Our Warranty</a></li>
-				<li><a href="/contact-us.html">Contact Us</a></li>
+				<li><a href="./who-we-are.html">Who We Are</a></li>
+				<li><a href="./why-us.html">Why Us</a></li>
+				<li><a href="./refer-accent.html">Refer Accent</a></li>
+				<li><a href="./contact-us.html">Contact Us</a></li>
 				<li><a href="mailto:office3@accenttranslation.net?Subject=Please%20can%20I%20get%20a%20quote" target="_top"><button class="btn btnSmall">Get a Quote</button></a></li>
 			</ul>
 		</nav>
@@ -104,10 +103,22 @@
 
 	<section id="who-we-are">
 		<div class="container">
-			
+			<div>
+				<h3>Who we are?</h3>
+				<p>Established by a professional translator with 4 international certifications, today Accent Translations is the only translation company in Canada specializing in notarized and certified translations for immigration purposes. We have been in the translation industry for almost 30 years, initially as a sole proprietorship, and since 2008 as an incorporated business. Our professionalism, commitment and very competitive prices are an asset for the performance of all immigration professionals in Canada, from individual consultants to the country’s biggest law firms. </p>
+			</div>
+
+			<div>
+				<h3>Our guarantee</h3>
+				<p>Our clients have submitted tens of thousands of translations to CIC over the years, and we are proud to say that despite this volume, our translations have never been challenged by the immigration authorities.</p>
+				
+				<p>We are so confident about the quality of our translations that we can offer you a quality guarantee that no other agency does:</p>
+
+				<p>If an application for immigration should be declined due to errors or omissions in our translation, we will not only reimburse the money paid to us from the client and redo the translation at no cost, we will also add  further compensation of CAD$1,000.00.*</p>
+			</div>
+			<div class="middleContainer"><small>*Disclaimer: an official letter from Citizenship and Immigration Canada (CIC) is required as proof. The letter should specify that the refusal of the application is due to errors or omissions in the translations provided by us.</small></div>
 		</div>
 	</section>
-
 
 	<footer class="section">
 		<nav>
