--- a/why-us.html
+++ b/why-us.html
@@ -13,7 +13,7 @@
 	<meta name='keywords' content=''>
 	<meta name='description' content=''>
 	<meta name='subject' content="">
-	<meta name='copyright' content=''>
+	<meta name='copyright' content=''> 
 	<meta name='language' content='EN'>
 	<meta name='robots' content='index,follow'>
 	<meta name='Classification' content='Business'>
@@ -91,21 +91,112 @@
 						<a class="dropdown-item" href="/international-students.html">International Students</a>
 					</div>
 				</li> -->
-				<li><a href="/who-we-are.html">Who We Are</a></li>
-				<li><a href="/why-us.html" class="active">Why Us</a></li>
-				<li><a href="/services.html">Services</a></li>
-				<li><a href="/our-warranty.html">Our Warranty</a></li>
-				<li><a href="/contact-us.html">Contact Us</a></li>
+				<li><a href="./who-we-are.html">Who We Are</a></li>
+				<li><a href="./why-us.html">Why Us</a></li>
+				<li><a href="./refer-accent.html">Refer Accent</a></li>
+				<li><a href="./contact-us.html">Contact Us</a></li>
 				<li><a href="mailto:office3@accenttranslation.net?Subject=Please%20can%20I%20get%20a%20quote" target="_top"><button class="btn btnSmall">Get a Quote</button></a></li>
 			</ul>
 		</nav>
 		
 	</header>
 
-	<section id="why-us">
+	<section id="why-us-main">
 		<div class="container">
-			
+
+			<div>
+				<h3>HIGH QUALITY SERVICE</h3>
+
+				<p>Assigning your translation to Accent Translations means putting your application in good hands. We know your needs and what you expect from us. Our meticulous project management, together with the experience and professionalism of our translators are your guarantee for high quality, fast service, helping you to create a successful application. What makes Accent Translations different from any other translation agency in Canada is:</p> 
+			</div>
+
+			<div>
+				<h3>PRIVACY PROTECTION</h3>
+				<p>We are well aware of the confidentiality requirements of the assignments we receive from our clients. Accordingly, documents well protected and we have a CISCO 2-tier protection server system (1 router – 1 switch/firewall).</p>
+			</div>
+
+			<div class="whiteContainer">
+				<div id="whyus_list">
+					<div>
+						<div class="circle_shape">	</div>
+						<h4>Experience</h4>
+		        <p>In business since 1991</p>
+		      </div>
+					<div>
+						<div class="circle_shape">	</div>
+						<h4>Speed</h4>
+						<p>Fast delivery of translations</p>
+					</div>
+					<div>
+						<div class="circle_shape">	</div>
+						<h4>Confidentiality</h4>
+						<p>We protect your client’s privacy</p>
+					</div>
+					<div>
+						<div class="circle_shape">	</div>
+						<h4>Reliability</h4>
+						<p>Quality control in-house translators</p>
+					</div>
+					<div>
+						<div class="circle_shape">	</div>
+						<h4>Competitiveness</h4>
+						<p>Right pricing with free notarization of the affidavit</p>
+					</div>
+					<div>
+						<div class="circle_shape">	</div>
+						<h4>Errors & Omissions Insurance</h4>
+						<p>We are insured with Lloyd’s of London against for Errors & Omissions</p>
+					</div>
+					<div>
+						<div class="circle_shape">	</div>
+						<h4>Specialization</h4>
+						<p>The only agency specialized in translations for immigration and the only one offering a referral system</p>
+					</div>
+					<div>
+						<div class="circle_shape">	</div>
+						<h4>User-Friendly</h4>
+						<p>Dedicated website in 8 languages with an explanatory video for applicants</p>
+						<p>This is why our clients appreciate our work and are loyal to our brand.</p>
+					</div>
+				</div>
+			</div>
+
+			<div>
+				<h3>IN-HOUSE TRANSLATORS</h3>
+				<p>Having a pool of in-house professional translators, we can process most of our translations on-site. This guarantees a faster delivery, better control of ongoing projects and allows us to provide rush service when required.</p>
+			</div>
+
+			<div>
+				<h3>CORPORATE CITIZENSHIP</h3>
+				<p>We believe that social responsibility is the duty of every company. In fulfilling this responsibility, Accent Translations regularly supports the Hospital for Sick Children (Sick Kids)!</p>
+			</div>
+			<div class="middleContainer">
+				<div id="letters_desktop">
+					<div id="letters">
+						<h3 data-name="Accomplishment">A</h3>
+						<h3 data-name="Competence">C</h3>
+						<h3 data-name="Compliance">C</h3>
+						<h3 data-name="Experience">E</h3>
+						<h3 data-name="No-problem experience">N</h3>
+						<h3 data-name="Time-saving service">T</h3>
+					</div>
+					<div>
+						<h5 id="the_word"> Accomplishment </h5>
+					</div>
+				</div>
+
+				<div id="letters_mobile">
+					<h6><span class="big_letter">A</span>ccomplishment</h6>
+					<h6><span class="big_letter">C</span>ompetence</h6>
+					<h6><span class="big_letter">C</span>ompliance</h6>
+					<h6><span class="big_letter">E</span>xperience</h6>
+					<h6><span class="big_letter">N</span>o-problem experience</h6>
+					<h6><span class="big_letter">T</span>ime-saving service</h6>
+				</div>
+			</div>
+
 		</div>
+		
 	</section>
 
 	<footer class="section">
