--- a/who-we-are.html
+++ b/who-we-are.html
@@ -59,7 +59,7 @@
 	
 	<header>
 		<div id="sticky">
-			<h1><a href="/"><img src="assets/svg/logo-colored.svg"></a></h1>
+			<h1><a href="./"><img src="assets/svg/logo-colored.svg"></a></h1>
 
 			<div id="social">
 				<a href=""><button><i class="fab fa-facebook-f"></i></button></a>
