mobile off everypage

--- a/who-we-are.html
+++ b/who-we-are.html
@@ -72,25 +72,7 @@
 		<nav>
 			<button id="hamburger"><i class="fas fa-bars"></i></button>
 			<ul id="menuUl">
-				<!-- <li class="dropdown-item">
-					<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Translations</a>
-				    <div class="dropdown-menu">
-						<a class="dropdown-item" href="/immigration-applications.html">Immigration Applications</a>
-						<a class="dropdown-item" href="/immigration-professionals.html">Immigration Professionals</a>
-						 <a class="dropdown-item" href="/other-kinds-of-translations.html">Other Kinds of Translations</a>
-				    </div>
-				</li>
-				<li class="dropdown-item">
-					<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Services</a>
-				    <div class="dropdown-menu">
-						<a class="dropdown-item" href="/translation-immigration.html">Translation Immigration</a>
-						<a class="dropdown-item" href="/translation-legal-text.html">Translation Legal Text</a>
-						<a class="dropdown-item" href="/website-translations.html">Website Translations</a>
-						<a class="dropdown-item" href="/medical-translations.html">Medical Translations</a>
-						<a class="dropdown-item" href="/financial-translations.html">Financial Translations</a>
-						<a class="dropdown-item" href="/international-students.html">International Students</a>
-					</div>
-				</li> -->
+				 
 				<li><a href="./who-we-are.html">Who We Are</a></li>
 				<li><a href="./why-us.html">Why Us</a></li>
 				<li><a href="./refer-accent.html">Refer Accent</a></li>
@@ -123,36 +105,19 @@
 	<footer class="section">
 		<nav>
 			<div>
-				<h6>Translations</h6>
+				<h6>By Profession</h6>
 				<ul>
-					<li><a href="/immigration-applications.html">Immigration Applications</a></li>
-					<li><a href="/immigration-professionals.html">Immigration Professionals</a></li>
-					<li><a href="/other-kinds-of-translations.html"></li></li>
-				</ul>
-				<h6>Services</h6>
-				<ul>
-					<li><a href="/translation-immigration.html">Translation Immigration</a></li>
-					<li><a href="/translation-legal-text.html">Translation Legal Text</a></li>
-					<li><a href="/website-translations.html">Website Translations</a></li>
-					<li><a href="/medical-translations.html">Medical Translations</a></li>
-					<li><a href="/financial-translations.html">Financial Translations</a></li>
-					<li><a href="/international-students.html">International Students</a></li>
+					<li><a href="./imm-applicants.html">Immigration Applications</a></li>
+					<li><a href="./imm-professionals.html">Immigration Professionals</a></li>
 				</ul>
 			</div>
 			<div>
-				<h6>About Us</h6>
-				<h6>Contact Us</h6>
-
-				<h6>Quote</h6>
+				<h6>Static Pages</h6>
 				<ul>
-					<li><a href="/quote-en.html">English</a></li>
-					<li><a href="">Language 2</a></li>
-					<li><a href="">Language 3</a></li>
-					<li><a href="">Language 4</a></li>
-					<li><a href="">Language 5</a></li>
-					<li><a href="">Language 6</a></li>
-					<li><a href="">Language 7</a></li>
-					<li><a href="">Language 8</a></li>
+					<li><a href="./who-we-are.html">Who We Are</a></li>
+					<li><a href="./why-us.html">Why Us</a></li>
+					<li><a href="./refer-accent.html">Refer Accent</a></li>
+					<li><a href="./contact-us.html">Contact Us</a></li>
 				</ul>
 			</div>
 		</nav>
