--- a/index.html
+++ b/index.html
@@ -72,25 +72,7 @@
 		<nav>
 			<button id="hamburger"><i class="fas fa-bars"></i></button>
 			<ul id="menuUl">
-				<!-- <li class="dropdown-item">
-					<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Translations</a>
-				    <div class="dropdown-menu">
-						<a class="dropdown-item" href="/immigration-applications.html">Immigration Applications</a>
-						<a class="dropdown-item" href="/immigration-professionals.html">Immigration Professionals</a>
-						 <a class="dropdown-item" href="/other-kinds-of-translations.html">Other Kinds of Translations</a>
-				    </div>
-				</li>
-				<li class="dropdown-item">
-					<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Services</a>
-				    <div class="dropdown-menu">
-						<a class="dropdown-item" href="/translation-immigration.html">Translation Immigration</a>
-						<a class="dropdown-item" href="/translation-legal-text.html">Translation Legal Text</a>
-						<a class="dropdown-item" href="/website-translations.html">Website Translations</a>
-						<a class="dropdown-item" href="/medical-translations.html">Medical Translations</a>
-						<a class="dropdown-item" href="/financial-translations.html">Financial Translations</a>
-						<a class="dropdown-item" href="/international-students.html">International Students</a>
-					</div>
-				</li> -->
+				
 				<li><a href="./who-we-are.html">Who We Are</a></li>
 				<li><a href="./why-us.html">Why Us</a></li>
 				<li><a href="./refer-accent.html">Refer Accent</a></li>
@@ -118,7 +100,7 @@
 		<div class="container">
 			<h3>Are you?</h3>
 			<div id="threeProf">
-				<a href="/imm-professionals.html">
+				<a href="./imm-professionals.html">
 					<div class="boxButton">
 						<img src="assets/svg/professional.svg">
 						<h5>Immigration<br> Professionals</h5>
@@ -126,7 +108,7 @@
 						<button class="btn btnDark">Learn More</button>
 					</div>
 				</a>
-				<a href="/imm-applicants.html">
+				<a href="./imm-applicants.html">
 					<div class="boxButton">
 						<img src="assets/svg/applicant.svg">
 						<h5>Immigration<br> Applicants</h5>
@@ -136,15 +118,6 @@
 				</a>
 				
 			</div>
-			<!-- <div>
-				<p>Some description about the process or how they select what they need.</p>
-
-				<p>Immigration Professionals - Are we human because of unique traits and attributes not shared with either animal or machine? The definition of “human” is circular: we are human by virtue of the properties that make us human (i.e., distinct from animal and machine). </p>
-
-				<p>Immigration Applicants - It is a definition by negation: that which separates us from animal and machine is our “human-ness”.</p>
-
-				<p>Other Kinds of Translations - We are human because we are not animal, nor machine. But such thinking has been rendered progressively less tenable by the advent of evolutionary and neo-evolutionary theories which postulate a continuum in nature between animals and Man.</p>	
-			</div> -->
 		</div>
 	</section>
 
@@ -193,36 +166,19 @@
 	<footer class="section">
 		<nav>
 			<div>
-				<h6>Translations</h6>
+				<h6>By Profession</h6>
 				<ul>
-					<li><a href="/immigration-applications.html">Immigration Applications</a></li>
-					<li><a href="/immigration-professionals.html">Immigration Professionals</a></li>
-					<li><a href="/other-kinds-of-translations.html"></li></li>
-				</ul>
-				<h6>Services</h6>
-				<ul>
-					<li><a href="/translation-immigration.html">Translation Immigration</a></li>
-					<li><a href="/translation-legal-text.html">Translation Legal Text</a></li>
-					<li><a href="/website-translations.html">Website Translations</a></li>
-					<li><a href="/medical-translations.html">Medical Translations</a></li>
-					<li><a href="/financial-translations.html">Financial Translations</a></li>
-					<li><a href="/international-students.html">International Students</a></li>
+					<li><a href="./imm-applicants.html">Immigration Applications</a></li>
+					<li><a href="./imm-professionals.html">Immigration Professionals</a></li>
 				</ul>
 			</div>
 			<div>
-				<h6>About Us</h6>
-				<h6>Contact Us</h6>
-
-				<h6>Quote</h6>
+				<h6>Static Pages</h6>
 				<ul>
-					<li><a href="/quote-en.html">English</a></li>
-					<li><a href="">Language 2</a></li>
-					<li><a href="">Language 3</a></li>
-					<li><a href="">Language 4</a></li>
-					<li><a href="">Language 5</a></li>
-					<li><a href="">Language 6</a></li>
-					<li><a href="">Language 7</a></li>
-					<li><a href="">Language 8</a></li>
+					<li><a href="./who-we-are.html">Who We Are</a></li>
+					<li><a href="./why-us.html">Why Us</a></li>
+					<li><a href="./refer-accent.html">Refer Accent</a></li>
+					<li><a href="./contact-us.html">Contact Us</a></li>
 				</ul>
 			</div>
 		</nav>
