--- a/imm-professionals.html
+++ b/imm-professionals.html
@@ -83,9 +83,16 @@
 		
 	</header>
 
+	
+
 	<section id="immProff">
 		<div class="container">
-			<div>
+			<div id="video"> 
+				<div class="container">
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/pOmu0LtcI6Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</div>
+			</div>
+			<div class="content-half">
 				<h3>Title</h3>
 
 				<p>As an immigration professional, you use all your skill and expertise to create the best application for your client.</p>
@@ -102,9 +109,10 @@
 				</ul>
 
 				<p>Don’t let a perfect application end up with an unsuccessful outcome due to one or more of the above problems caused by a poor translation of their documents!</p>
+				<a href="https://goo.gl/forms/Iy2zoJOcSgHq1j1k1" target="_blank"><button class="btn btnDark">Get a Quote</button></a>
 			</div>
 
-			<a href="https://goo.gl/forms/Iy2zoJOcSgHq1j1k1" target="_blank"><button id="picker" class="btn btnDark">Get a Quote</button></a>
+			
 
 		</div>
 	</section>
