why us page update

--- a/why-us.html
+++ b/why-us.html
@@ -109,17 +109,18 @@
 
 	<section id="why-us-main">
 		<div class="container">
-			<div>
-				<h3>Our guarantee</h3>
-				<p>Our clients have submitted tens of thousands of translations to CIC over the years, and we are proud to say that despite this volume, our translations have never been challenged by the immigration authorities.</p>
-				
-				<p>We are so confident about the quality of our translations that we can offer you a quality guarantee that no other agency does:</p>
+			<!-- <div class="span2"> -->
+				<div>
+					<h3>Our guarantee</h3>
+					<p>Our clients have submitted tens of thousands of translations to CIC over the years, and we are proud to say that despite this volume, our translations have never been challenged by the immigration authorities.</p>
+					
+					<p>We are so confident about the quality of our translations that we can offer you a quality guarantee that no other agency does:</p>
 
-				<p>If an application for immigration should be declined due to errors or omissions in our translation, we will not only reimburse the money paid to us from the client and redo the translation at no cost, we will also add  further compensation of CAD$1,000.00.*</p>
-			</div>
+					<p>If an application for immigration should be declined due to errors or omissions in our translation, we will not only reimburse the money paid to us from the client and redo the translation at no cost, we will also add  further compensation of CAD$1,000.00.*</p>
+				</div>
 
-			<div class="middleContainer single"><small>*Disclaimer: an official letter from Citizenship and Immigration Canada (CIC) is required as proof. The letter should specify that the refusal of the application is due to errors or omissions in the translations provided by us.</small></div>
-			
+				<div class="middleContainer single"><small>*Disclaimer: an official letter from Citizenship and Immigration Canada (CIC) is required as proof. The letter should specify that the refusal of the application is due to errors or omissions in the translations provided by us.</small></div>
+			<!-- </div> -->
 			<div>
 				<h3>HIGH QUALITY SERVICE</h3>
 
@@ -189,7 +190,7 @@
 			<div class="middleContainer">
 				<div id="letters_desktop">
 					<div id="letters">
-						<h3 data-name="Accomplishment">A</h3>
+						<h3 data-name="Accomplishment" class="opacity">A</h3>
 						<h3 data-name="Competence">C</h3>
 						<h3 data-name="Compliance">C</h3>
 						<h3 data-name="Experience">E</h3>
