--- a/imm-applicants.html
+++ b/imm-applicants.html
@@ -110,7 +110,6 @@
 	<section id="languageSelector">
 		<div class="container">
 			<div id="languages">
-				<h5>In order to receive a quote, please select your language and follow the instructions in the video.</h5>
 				<ul>
 					<li><button class="btnSmall active btn"><span class="language_flag"><img src=""></span>English</li>
 					<li><button class="btnSmall btn"><span class="language_flag"><img src=""></span>Spanish</button></li>
@@ -121,136 +120,11 @@
 					<li><button class="btnSmall btn"><span class="language_flag"><img src=""></span>Chinese</button></li>
 					<li><button class="btnSmall btn"><span class="language_flag"><img src=""></span>Arabic</button></li>
 				</ul>
-			
 		</div>
 	</section>
 
-	<section id="languageSelector">
-		<div class="container">
-			<div id="video" class="span2"> 
-				<div class="vidcon">
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/pOmu0LtcI6Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				</div>
-			</div>
-		</div>
-	</section>
-	<section id="why-us"> 
+	<section id="applicants"> 
 		
-	</section>
-
-	<!-- <section id="video"> 
-		<div class="container">
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/pOmu0LtcI6Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-		</div>
-	</section> -->
-
-	<section id="quote">
-		<!-- <form id="test-form">
-  
-			<div>
-				<label>Your name and surname (exactly as it is in your passport)</label>
-				<input type="text" name="name" id="name" placeholder="Full Name" required/>
-			</div>
-
-			<div>
-				<label>Correct spelling (exactly as it is in their passport) for all other persons named in the documents that you are uploading:</label>
-				<input type="text" name="spelling" placeholder="Full Name Correct Spelling"/>
-			</div>
-
-			<div>
-				<label>Your Email</label>
-				<input type="text" name="email" id="email" placeholder="Your Email"/>
-			</div>
-
-			<div>
-				<label>Full address</label>
-				<input type="text" name="address" placeholder="Full Address" required />
-			</div>
-			
-			<div>
-				<label>City</label>
-				<input type="text" name="city" placeholder="Full Address" required/>
-			</div>
-
-			<div>
-				<label>Postal Code</label>
-				<input type="text" name="postal_code" placeholder="Full Address" required/>
-			</div>
-
-			<div>
-				<label>Referral lawyer’s name</label>
-				<input type="text" name="lawyers_name" placeholder="Referral lawyer’s name"/>
-			</div>
-
-			<div>
-				<label>Referral lawyer’s firm</label>
-				<input type="text" name="lawyers_firm" placeholder="Referral lawyer’s firm"/>
-			</div>
-
-			<div>
-				<label>Email of your lawyer</label>
-				<input type="text" name="lawyers_email" placeholder="Email of your lawyer"/>
-			</div>
-
-			<div>
-				<label>Do you want us to mail the translations directly to your lawyer?</label>
-				<input type="radio" id="yes" name="mail_to_lawyer" value="Yes" checked>
-				<input type="radio" id="no" name="mail_to_lawyer" value="No">
-			</div>
-
-			<div>
-				<label>Are you applying for a Provincial Nominee Program?</label>
-				<input type="radio" id="yes" name="provincial_nominee" value="Yes" checked>
-				<input type="radio" id="no" name="provincial_nominee" value="No">
-			</div>
-
-			<div>
-				<label>If YES, to which Province?</label>
-				<select name="if_yes" id="if_yes">
-				    <option name="-" value="-">--Please choose an option--</option>
-				    <option name="alberta" value="alberta">Alberta</option>
-				    <option name="british_columbia" value="british_columbia">British Columbia</option>
-				    <option name="manitoba" value="manitoba">Manitoba</option>
-				    <option name="new_brunswick" value="new_brunswick">New Brunswick</option>
-				    <option name="newfoundland_and_labrador" value="newfoundland_and_labrador">Newfoundland and Labrador</option>
-				    <option name="northwest_territories" value="northwest_territories">Northwest Territories</option>
-				    <option name="nova_scotia" value="nova_scotia">Nova Scotia</option>
-				    <option name="nunavut" value="nunavut">Nunavut</option>
-				    <option name="ontario" value="ontario">Ontario</option>
-				    <option name="prince_edward_island" value="prince_edward_island">Prince Edward Island</option>
-				    <option name="quebec" value="quebec">Quebec</option>
-				    <option name="saskatchewan" value="saskatchewan">Saskatchewan</option>
-				    <option name="yukon" value="yukon">Yukon</option>
-				</select>
-			</div>
-
-			<div>
-				
-				<div class="btn">
-	              <span>File</span>
-	              <input name="file_upload" id="file" type="file">
-	            </div>
-	            <div class="file-path-wrapper">
-	              <input class="file-path validate" type="text" placeholder="Select a file on your computer">
-	            </div>
-			</div>
-
-
-
-			<div>
-			<label>Comments - Special requests</label>
-			<textarea name="comment" placeholder="Comments" rows="5" cols="33"/></textarea>
-			</div>
-
-			<div>
-			<button class="btn btnDark" type="submit" id="submit-form">Submit</button>
-			</div> 
-
-		</form> -->
-		<div id="result"></div>
-		<a href="https://goo.gl/forms/Iy2zoJOcSgHq1j1k1" target="_blank"><button id="picker" class="btn btnDark">Get a Quote</button></a>
-		<!--
-		<p>Disclaimer: translation must reflect the data in the original documents and we will use the names and the address that you gave to us. In case of discrepancy between the text in the document and your indication, we must keep our translation faithful to the original.</p> -->
 	</section>
 
 	<footer class="section">
@@ -295,9 +169,7 @@
 
 	<script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
-	<script type="text/javascript" src="//apis.google.com/js/client.js"></script>
 
-    </script>
 	<script src="public/js/main.js"></script> 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-98670015-1"></script> -->
